Updated Pebble code and PiSofa V2 PCB

--- a/Pebble/PiSofa/appinfo.json
+++ b/Pebble/PiSofa/appinfo.json
@@ -8,7 +8,7 @@
     "longName": "PiSofa",
     "versionCode": 2,
     "capabilities": [
-        ""
+        "configurable"
     ],
     "shortName": "PiSofa",
     "companyName": "Kevin Cooper",
