--- a/Android/PiSofaApp/PiSofa/build.gradle
+++ b/Android/PiSofaApp/PiSofa/build.gradle
@@ -1,28 +1,25 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.+'
-    }
-}
-apply plugin: 'android'
-
-repositories {
-    mavenCentral()
-}
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.2"
 
     defaultConfig {
+        applicationId "com.cooper.sofaking"
         minSdkVersion 17
-        targetSdkVersion 19
+        targetSdkVersion 21
+        versionCode 1
+        versionName "1.0"
+    }
+    buildTypes {
+        release {
+            runProguard false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:19.0.0'
-    compile files('libs/android-async-http-1.4.4.jar')
+    compile "com.android.support:appcompat-v7:21.0.0"
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
