--- a/Android/PiSofaApp/PiSofa/src/main/AndroidManifest.xml
+++ b/Android/PiSofaApp/PiSofa/src/main/AndroidManifest.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.cooper.sofaking"
-          android:versionCode="1"
-          android:versionName="1.0">
+          package="com.cooper.sofaking">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-    <uses-sdk
-        android:minSdkVersion="17"
-        android:targetSdkVersion="19"/>
 
     <application
         android:allowBackup="true"
@@ -17,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.cooper.sofaking.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
